--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "gl-ionic-background-video": "0.0.5",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
+    "video.js": "^7.6.0",
+    "videogular2": "^7.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -53,6 +56,7 @@
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
+    "@types/core-js": "^2.5.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
