--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/unique-device-id": "^5.14.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "com-sarriaroman-photoviewer": "^1.2.4",
     "cordova-android": "7.1.4",
     "cordova-plugin-advanced-http": "^2.1.1",
@@ -38,6 +39,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^3.3.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -84,7 +86,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "com-sarriaroman-photoviewer": {}
+      "com-sarriaroman-photoviewer": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
