--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@ionic-native/unique-device-id": "^5.14.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "@ngrx/router-store": "^8.3.0",
+    "@ngrx/store": "^8.3.0",
+    "@ngrx/store-devtools": "^8.3.0",
     "com-sarriaroman-photoviewer": "^1.2.4",
     "cordova-android": "7.1.4",
     "cordova-plugin-advanced-http": "^2.1.1",
@@ -41,6 +44,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^3.3.0",
     "core-js": "^2.5.4",
+    "remote-redux-devtools": "^0.5.16",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -67,6 +71,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "remotedev": "^0.2.9",
+    "remotedev-server": "^0.3.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
