--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.14.0",
     "@ionic-native/unique-device-id": "^5.14.0",
-    "@ionic/angular": "^4.7.1",
+    "@ionic/angular": "^4.10.0-dev.201909061231.2ea728e",
     "@ionic/storage": "^2.2.0",
     "@ngrx/effects": "^8.3.0",
     "@ngrx/router-store": "^8.3.0",
